service_and_deployment/service1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      serviceAccountName: vault
      containers:
        - image: service1:latest
          imagePullPolicy: Never
          name: service1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service1-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: service1
