service_and_deployment/service2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - image: service2:latest
          imagePullPolicy: Never
          name: service2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service2-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: service2
